Fix header button alignment

--- a/embedded_resources/web_interface/index.css
+++ b/embedded_resources/web_interface/index.css
@@ -99,22 +99,24 @@ svg > g, svg > path {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid var(--color);
-    align-items: stretch;
-    align-content: center;
+    align-items: center;
 }
 .container .header .title {
     padding: 9px 12px;
     cursor: pointer;
+    text-align: center;
 }
-.left-part{
-    padding: 4px 0 4px 6px;
+.left-part, .right-part {
+    padding: 4px 6px;
+}
+.left-part {
     border-left: 1px solid var(--color);
+    margin-right:auto;
+    width:auto;
 }
-
 .right-part {
-    margin-left: auto;
-    padding-right: 6px;
-    padding-top:4px;
+    margin-left:auto;
+    text-align: right;
 }
 .container .header button {
     margin-top: 2px;
